修改：教程43：https://www.bilibili.com/video/BV1yJ411x7U9

--- a/Gallery/app/src/main/res/navigation/navigation.xml
+++ b/Gallery/app/src/main/res/navigation/navigation.xml
@@ -11,12 +11,12 @@
         android:label="Gallery"
         tools:layout="@layout/fragment_gallery">
         <action
-            android:id="@+id/action_galleryFragment_to_photoFragment"
-            app:destination="@id/photoFragment" />
+            android:id="@+id/action_galleryFragment_to_pagerPtotoFragment"
+            app:destination="@id/pagerPtotoFragment" />
     </fragment>
     <fragment
-        android:id="@+id/photoFragment"
-        android:name="com.example.gallery.PhotoFragment"
-        android:label="Photo"
-        tools:layout="@layout/fragment_photo" />
+        android:id="@+id/pagerPtotoFragment"
+        android:name="com.example.gallery.PagerPtotoFragment"
+        android:label="Phtoto"
+        tools:layout="@layout/fragment_pager_ptoto" />
 </navigation>
