--- a/Gallery/app/src/main/res/menu/menu.xml
+++ b/Gallery/app/src/main/res/menu/menu.xml
@@ -4,4 +4,7 @@
     <item
         android:id="@+id/swipeIndcator"
         android:title="swipe to refresh" />
+    <item
+        android:id="@+id/menuRetry"
+        android:title="retry" />
 </menu>
